--- a/styles/SCSS/_drinkSpotlight.scss
+++ b/styles/SCSS/_drinkSpotlight.scss
@@ -9,6 +9,8 @@
 	padding: 20px;
 	opacity: 1;
 	transition: opacity 0.4s;
+	z-index: 1;
+	background: black;
 
 	&:before {
 		content: " ";
@@ -20,7 +22,7 @@
 		height: 100%;
 		width: 100%;
 		opacity: 0.2;
-		z-index: 0;
+		z-index: 1;
 	}
 
 	.imgContainer {
