--- a/styles/style.css
+++ b/styles/style.css
@@ -278,6 +278,12 @@ ol {
   margin: 0 auto;
 }
 
+@media (max-width: 1050px) {
+  .wrapper {
+    width: 95%;
+  }
+}
+
 .headerWrapper {
   max-width: 1080px;
   width: 80vw;
@@ -334,7 +340,7 @@ h1 {
   width: 500px;
   font-size: 6rem;
   line-height: 1;
-  margin: 20px 0;
+  margin: 20px 0 10px;
   color: #8ce8fb;
 }
 
@@ -433,10 +439,12 @@ header h2 {
           animation: slideUp 3.5s forwards ease;
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
+  z-index: 0;
 }
 
 @-webkit-keyframes slideUp {
   0% {
+    z-index: 0;
     bottom: -400px;
   }
   30% {
@@ -455,6 +463,7 @@ header h2 {
     bottom: -5px;
   }
   100% {
+    z-index: 0;
     bottom: 0;
     opacity: 1;
   }
@@ -462,6 +471,7 @@ header h2 {
 
 @keyframes slideUp {
   0% {
+    z-index: 0;
     bottom: -400px;
   }
   30% {
@@ -480,6 +490,7 @@ header h2 {
     bottom: -5px;
   }
   100% {
+    z-index: 0;
     bottom: 0;
     opacity: 1;
   }
@@ -541,8 +552,11 @@ header h2 {
           animation-delay: 3s;
 }
 
+main {
+  height: auto;
+}
+
 .landingPage {
-  height: 80vh;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
@@ -563,7 +577,7 @@ header h2 {
   -webkit-box-shadow: inset 20px 20px 40px black, inset -20px -20px 40px black;
           box-shadow: inset 20px 20px 40px black, inset -20px -20px 40px black;
   background-size: contain;
-  background-position-y: 100px;
+  background-position-y: bottom;
   background-repeat: no-repeat;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -579,7 +593,6 @@ header h2 {
       -ms-flex-align: center;
           align-items: center;
   height: 600px;
-  margin-bottom: 20px;
   padding: 10px;
   border-radius: 10px;
 }
@@ -644,6 +657,7 @@ header h2 {
   opacity: 1;
   -webkit-transition: opacity 0.4s;
   transition: opacity 0.4s;
+  z-index: 1;
 }
 
 .drinkGallery:before {
@@ -656,7 +670,7 @@ header h2 {
   height: 100%;
   width: 100%;
   opacity: 0.2;
-  z-index: 0;
+  z-index: 1;
 }
 
 .drinkGallery ul {
@@ -738,9 +752,23 @@ h3 {
   z-index: 2;
 }
 
-.footer {
+footer {
   grid-area: footer;
-  background: #F9DEC9;
+  position: relative;
+  width: 100%;
+  bottom: 0;
+  background: #1F1F1F;
+  margin: 10px 0 0 0;
+  padding: 2px;
+}
+
+footer p {
+  margin: 0;
+  line-height: 1;
+  color: #3A405A;
+  font-size: 1.2rem;
+  text-transform: capitalize;
+  text-align: center;
 }
 
 .drinkSpotlight {
@@ -759,6 +787,8 @@ h3 {
   opacity: 1;
   -webkit-transition: opacity 0.4s;
   transition: opacity 0.4s;
+  z-index: 1;
+  background: black;
 }
 
 .drinkSpotlight:before {
@@ -771,7 +801,7 @@ h3 {
   height: 100%;
   width: 100%;
   opacity: 0.2;
-  z-index: 0;
+  z-index: 1;
 }
 
 .drinkSpotlight .imgContainer {
@@ -847,4 +877,8 @@ h3 {
   opacity: 1;
   -webkit-transition: opacity 0.4s;
   transition: opacity 0.4s;
+}
+
+.relatedDrinks {
+  display: none;
 }
