--- a/styles/style.css
+++ b/styles/style.css
@@ -563,7 +563,7 @@ main {
       grid-template-columns: 1fr 1fr 1fr;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-      grid-template-areas: "form gallery gallery" "form gallery gallery";
+      grid-template-areas: "form gallery gallery" "form gallery gallery";
   grid-gap: 15px;
 }
 
@@ -703,6 +703,7 @@ main {
   width: calc(33% - 20px);
   margin: 10px;
   height: 190px;
+  z-index: 2;
 }
 
 .drinkGallery li img {
