trying to do the stretch goal

--- a/styles/SCSS/_relatedDrinks.scss
+++ b/styles/SCSS/_relatedDrinks.scss
@@ -1,3 +1,17 @@
-.relatedDrinks {
+.relatedDrinks ul{
+    @include flexRow();
+    width: 100%;
+    li {
+        width: 20%;
+
+        img {
+            width: 100%;
+        }
+    }
+}
+
+
+.forMobile {
     display: none;
+
 }
