--- a/styles/style.css
+++ b/styles/style.css
@@ -880,6 +880,31 @@ footer p {
   transition: opacity 0.4s;
 }
 
-.relatedDrinks {
+.relatedDrinks ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.relatedDrinks ul li {
+  width: 20%;
+}
+
+.relatedDrinks ul li img {
+  width: 100%;
+}
+
+.forMobile {
   display: none;
 }
