--- a/styles/SCSS/_relatedDrinks.scss
+++ b/styles/SCSS/_relatedDrinks.scss
@@ -2,10 +2,20 @@
     @include flexRow();
     width: 100%;
     li {
+        position: relative;
+        z-index: 2;
         width: 20%;
 
         img {
             width: 100%;
+            height: auto;
+        }
+
+        h3 {
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            text-align: center;
         }
     }
 }
