--- a/styles/SCSS/_drinkSpotlight.scss
+++ b/styles/SCSS/_drinkSpotlight.scss
@@ -9,21 +9,9 @@
 	padding: 20px;
 	opacity: 1;
 	transition: opacity 0.4s;
-	z-index: 1;
-	background: black;
-
-	&:before {
-		content: " ";
-		position: absolute;
-		background: $white;
-		border-radius: 10px;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		opacity: 0.2;
-		z-index: 1;
-	}
+	z-index: 0;
+	background: $backing;
+	overflow-y: scroll;
 
 	.imgContainer {
 		float: left;
@@ -33,7 +21,7 @@
 		margin-bottom: 20px;
 		opacity: 1;
 		transition: opacity 0.4s;
-
+		z-index: 1;
 		img {
 			width: 100%;
 			object-fit: cover;
@@ -50,6 +38,7 @@
 		font-size: 3rem;
 		width: 55%;
 		float: right;
+		z-index: 1;
 	}
 
 	h3 {
@@ -59,6 +48,7 @@
 		font-size: 1.5rem;
 		letter-spacing: 1.5px;
 		line-height: 1;
+		z-index: 1;
 	}
 
 
@@ -71,6 +61,7 @@
 		margin-top: 20px;
 		opacity: 1;
 		transition: opacity 0.4s;
+		z-index: 1;
 
 		li {
 			opacity: 1;
@@ -94,5 +85,6 @@
 		margin-top: 150px;
 		opacity: 1;
 		transition: opacity 0.4s;
+		z-index: 1;
 	}
 }
