--- a/styles/SCSS/_landingPage.scss
+++ b/styles/SCSS/_landingPage.scss
@@ -77,19 +77,9 @@ main {
 	opacity: 1;
 	transition: opacity 0.4s;
 	z-index: 1;
+	background: $backing;
+	border-radius: 10px;
 
-	&:before {
-		content: " ";
-		position: absolute;
-		background: $white;
-		border-radius: 10px;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		opacity: 0.2;
-		z-index: 1;
-	}
 
 	ul {
 		@include flexRow(flex-start);
