--- a/styles/style.css
+++ b/styles/style.css
@@ -586,9 +586,9 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -623,6 +623,7 @@ main {
   margin: 2.5px;
   width: 100%;
   border-radius: 5px;
+  z-index: 1;
 }
 
 .drinkFilters label,
@@ -633,6 +634,7 @@ main {
 
 .drinkFilters button {
   background: #8ce8fb;
+  font-size: 2rem;
 }
 
 .drinkFilters button:hover {
