--- a/styles/style.css
+++ b/styles/style.css
@@ -345,7 +345,7 @@ h1 {
 }
 
 header h2 {
-  color: #F6F6F6;
+  color: #f6f6f6;
   position: relative;
   text-align: right;
   font-size: 3rem;
@@ -430,11 +430,13 @@ header h2 {
   position: absolute;
   right: 0;
   bottom: -400px;
-  height: 350px;
-  width: 350px;
+  height: 35%;
+  width: 35%;
   opacity: 0;
   background: url(../assets/main2.png);
   background-size: cover;
+  background-position-y: top;
+  background-position-x: 40%;
   -webkit-animation: slideUp 3.5s forwards ease;
           animation: slideUp 3.5s forwards ease;
   -webkit-animation-delay: 1s;
@@ -600,7 +602,7 @@ main {
 .drinkFilters:before {
   content: " ";
   position: absolute;
-  background: #F6F6F6;
+  background: #f6f6f6;
   border-radius: 10px;
   top: 0;
   left: 0;
@@ -612,7 +614,6 @@ main {
 
 .drinkFilters form {
   width: 100%;
-  padding: 5px;
   font-size: 2rem;
   z-index: 1;
 }
@@ -642,8 +643,13 @@ main {
 }
 
 .drinkFilters input {
-  border: 2px solid #F9DEC9;
-  background: #F6F6F6;
+  border: 2px solid #f9dec9;
+  background: #f6f6f6;
+}
+
+.drinkFilters input:focus {
+  border: 3px solid #8ce8fb;
+  margin: 1.5px;
 }
 
 .drinkGallery {
@@ -660,7 +666,7 @@ main {
   -webkit-transition: opacity 0.4s;
   transition: opacity 0.4s;
   z-index: 1;
-  background: #F6F6F633;
+  background: #f6f6f633;
   border-radius: 10px;
 }
 
@@ -731,7 +737,7 @@ main {
 
 h3 {
   text-shadow: 1px 1px 2px black;
-  color: #F6F6F6;
+  color: #f6f6f6;
   font-size: 2rem;
   text-align: center;
   position: absolute;
@@ -749,7 +755,7 @@ footer {
   position: relative;
   width: 100%;
   bottom: 0;
-  background: #1F1F1F;
+  background: #1f1f1f;
   margin: 10px 0 0 0;
   padding: 2px;
 }
@@ -757,7 +763,7 @@ footer {
 footer p {
   margin: 0;
   line-height: 1;
-  color: #3A405A;
+  color: #3a405a;
   font-size: 1.2rem;
   text-transform: capitalize;
   text-align: center;
@@ -780,7 +786,7 @@ footer p {
   -webkit-transition: opacity 0.4s;
   transition: opacity 0.4s;
   z-index: 1;
-  background: #F6F6F633;
+  background: #f6f6f633;
   overflow-y: scroll;
 }
 
@@ -801,8 +807,8 @@ footer p {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 10px;
-  -webkit-box-shadow: 0 0 5px 2px #3A405A;
-          box-shadow: 0 0 5px 2px #3A405A;
+  -webkit-box-shadow: 0 0 5px 2px #3a405a;
+          box-shadow: 0 0 5px 2px #3a405a;
 }
 
 .drinkSpotlight h2 {
@@ -831,7 +837,7 @@ footer p {
   clear: right;
   position: relative;
   width: 55%;
-  color: #F6F6F6;
+  color: #f6f6f6;
   margin-top: 20px;
   opacity: 1;
   -webkit-transition: opacity 0.4s;
@@ -856,7 +862,7 @@ footer p {
   float: none;
   width: 100%;
   clear: both;
-  color: #F6F6F6;
+  color: #f6f6f6;
   margin-top: 150px;
   opacity: 1;
   -webkit-transition: opacity 0.4s;
@@ -865,7 +871,7 @@ footer p {
 }
 
 .drinkSpotlight .glassType {
-  color: #F6F6F6;
+  color: #f6f6f6;
   margin: 5px 0;
 }
 
@@ -896,6 +902,8 @@ footer p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 100%;
   z-index: 1;
 }
@@ -907,9 +915,21 @@ footer p {
   width: calc(25% - 10px);
 }
 
+@media (max-width: 930px) {
+  .relatedDrinks ul li {
+    width: calc(50% - 20px);
+    height: 120px;
+  }
+}
+
 .relatedDrinks ul li img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  border-radius: 10px;
+  -o-object-position: top;
+     object-position: top;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .relatedDrinks ul li h3 {
