--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -5,7 +5,7 @@ $tertiary: #f9f7f3;
 $accent: #8ce8fb;
 $black: #1f1f1f;
 $white: #f6f6f6;
-$backing: #f6f6f633;
+$backing: #313131;
 $background: #2a1824;
 
 @import url("https://fonts.googleapis.com/css?family=Arima+Madurai|Forum|Poiret+One&display=swap");
