--- a/styles/SCSS/_landingPage.scss
+++ b/styles/SCSS/_landingPage.scss
@@ -9,6 +9,10 @@ main {
 		"form gallery gallery"
 		"form gallery gallery";
 	grid-gap: 15px;
+
+	@include maxWidth630 {
+		display: block;
+	}
 }
 
 .drinkFilters {
@@ -19,12 +23,18 @@ main {
 	background-size: contain;
 	background-position-y: bottom;
 	background-repeat: no-repeat;
-	@include flexCol(space-evenly);
+	@include flexCol(space-between);
 	align-items: baseline;
 	// height: 600px;
 	height: 84vh;
 	padding: 10px;
 	border-radius: 10px;
+
+	@include maxWidth630 {
+		flex-wrap: wrap;
+		height: 35vh;
+		padding: 5px;
+	}
 
 	&:before {
 		content: " ";
@@ -43,6 +53,11 @@ main {
 		width: 100%;
 		font-size: 2rem;
 		z-index: 1;
+
+		@include maxWidth630 {
+			height: 50%;
+			width: 30%;
+		}
 	}
 
 	button,
@@ -66,12 +81,26 @@ main {
 			cursor: pointer;
 		}
 	}
-
+	.drinksByIngredientForm {
+		@include maxWidth630 {
+			height: 100%;
+			@include flexCol(flex-start);
+			.ingredient1Input {
+				margin-bottom: 15%;
+			}
+		}
+	}
 	.feelingLuckyButton,
 	.mocktailButton {
 		// color: #f7567c;
 		background: #fcd29f;
 		// background: #fcab64;
+		@include maxWidth630 {
+			height: 18%;
+			// margin: 4.25% 0;
+			flex-wrap: wrap;
+			width: 30%;
+		}
 	}
 
 	input {
