added hover effect to button

--- a/styles/SCSS/_landingPage.scss
+++ b/styles/SCSS/_landingPage.scss
@@ -77,8 +77,11 @@ main {
 	button {
 		background: $accent;
 		font-size: 2rem;
+		transition: all 0.5s;
 		&:hover {
 			cursor: pointer;
+			color: $accent;
+			background: black;
 		}
 	}
 	.drinksByIngredientForm {
