--- a/styles/style.css
+++ b/styles/style.css
@@ -574,7 +574,7 @@ main {
       grid-template-columns: 1fr 1fr 1fr;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-      grid-template-areas: "form gallery gallery" "form gallery gallery";
+      grid-template-areas: "form gallery gallery" "form gallery gallery";
   grid-gap: 15px;
 }
 
@@ -670,10 +670,14 @@ main {
 .drinkFilters button {
   background: #8ce8fb;
   font-size: 2rem;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .drinkFilters button:hover {
   cursor: pointer;
+  color: #8ce8fb;
+  background: black;
 }
 
 @media (max-width: 630px) {
